--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Увертюра Иордан — Как будто ты в фонтан упал</title>
+
     <style>
         /* ---------------------- ГЛАВНЫЙ СТИЛЬ ---------------------- */
         body {
@@ -16,21 +17,52 @@
             position: relative;
         }
 
-        /* ---------------------- МРЯКОТНАЯ ФОНА ТУМАНА ---------------------- */
+        /* --- МРЯКОТНАЯ ФОНА ТУМАНА --- */
         .fog {
             position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: radial-gradient(circle at 30% 60%, rgba(30, 30, 40, 0.4), transparent 70%),
                         radial-gradient(circle at 80% 30%, rgba(20, 20, 30, 0.4), transparent 60%);
             filter: blur(40px);
             animation: fogMove 20s ease-in-out infinite alternate;
             z-index: 1;
         }
-
         @keyframes fogMove {
             0% { transform: translate(-20px, -20px); }
             100% { transform: translate(20px, 20px); }
+        }
+
+        /* ---------------------- МОДАЛЬНОЕ ОКНО ---------------------- */
+        .modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.8);
+            padding: 30px;
+            border-radius: 10px;
+            width: 60%;
+            max-width: 500px;
+            color: #fff;
+            font-size: 1.2em;
+            text-align: center;
+            z-index: 10;
+            display: none;  /* Скрыто по умолчанию */
+        }
+
+        /* ---------------------- КНОПКА ЗАКРЫТИЯ ---------------------- */
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 1.5em;
+            color: #fff;
+            background: transparent;
+            border: none;
+            cursor: pointer;
         }
 
         /* ---------------------- ЗАГОЛОВОК ---------------------- */
@@ -91,7 +123,10 @@
             border-bottom: 1px solid #1a1a1e;
         }
 
-        .track:last-child { border-bottom: none; }
+        .track:last-child {
+            border-bottom: none;
+        }
+
         .track-name {
             margin-bottom: 5px;
             color: #9dd;
@@ -102,70 +137,21 @@
             margin-bottom: 10px;
         }
 
-        /* ---------------------- МОДАЛЬНОЕ ОКНО ---------------------- */
-        .modal {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            padding: 30px;
-            width: 60%;
-            max-width: 600px;
-            border-radius: 8px;
-            z-index: 10;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.5s ease, visibility 0s 0.5s;
-        }
-
-        .modal.active {
-            opacity: 1;
-            visibility: visible;
-            transition: opacity 0.5s ease;
-        }
-
-        .modal-content {
-            font-family: "Courier", sans-serif;
-            font-size: 1.2em;
-            line-height: 1.5;
-            text-align: justify;
-            letter-spacing: 1px;
-        }
-
-        .close-btn {
-            background-color: transparent;
-            border: none;
-            color: #e8e8e8;
-            font-size: 1.5em;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-
-        .close-btn:hover {
-            color: #ff0000;
-        }
-
         /* ---------------------- КРЫСЫ ---------------------- */
         .rat {
             position: fixed;
-            bottom: 0;
             width: 80px;
             height: 40px;
             background: url('images/rat-silhouette.png') center/contain no-repeat;
             opacity: 0.7;
             pointer-events: none;
-            animation: ratRun 3s linear forwards;
             z-index: 50;
+            animation: ratMove 5s linear infinite;
         }
 
-        @keyframes ratRun {
-            0% { transform: translateX(-150px); }
-            100% { transform: translateX(120vw); }
+        @keyframes ratMove {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(100vw); }
         }
 
         /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
@@ -179,15 +165,16 @@
             animation: creep 4s linear forwards;
             z-index: 4;
         }
-
         @keyframes creep {
             0% { transform: translateX(-200px); opacity: 0; }
             20% { opacity: 0.4; }
             80% { opacity: 0.4; }
             100% { transform: translateX(130vw); opacity: 0; }
         }
+
     </style>
 </head>
+
 <body>
 
 <div class="fog"></div>
@@ -200,7 +187,6 @@
     <img class="album-cover" id="album" src="images/album1.jpg" alt="Album cover">
 
     <div class="tracklist" id="tracklist">
-
         <div class="track">
             <div class="track-name">Трек 1 — (название позже)</div>
             <audio controls src="audio/track1.mp3"></audio>
@@ -216,57 +202,151 @@
             <audio controls src="audio/track3.mp3"></audio>
         </div>
 
+         <div class="track">
+            <div class="track-name">Трек 4 — (название позже)</div>
+            <audio controls src="audio/track4.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 5 — (название позже)</div>
+            <audio controls src="audio/track5.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 6 — (название позже)</div>
+            <audio controls src="audio/track6.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 7 — (название позже)</div>
+            <audio controls src="audio/track7.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 8 — (название позже)</div>
+            <audio controls src="audio/track8.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 9 — (название позже)</div>
+            <audio controls src="audio/track9.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 10 — (название позже)</div>
+            <audio controls src="audio/track10.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 11 — (название позже)</div>
+            <audio controls src="audio/track11.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 12 — (название позже)</div>
+            <audio controls src="audio/track12.mp3"></audio>
+        </div>
+
+         <div class="track">
+            <div class="track-name">Трек 13 — (название позже)</div>
+            <audio controls src="audio/track13.mp3"></audio>
+        </div>
     </div>
 </div>
 
 <!-- ------------------- МОДАЛЬНОЕ ОКНО ------------------- -->
-<div id="modal" class="modal">
-    <button class="close-btn" id="close-modal">×</button>
-    <div class="modal-content">
-        <p>Ты шагаешь, не замечая, как земля под ногами теряет прочность. В одно мгновение всё привычное уходит. Лишь на мгновение твой взгляд скользит по открывшемуся люку, и ты понимаешь — слишком поздно.</p>
-    </div>
+<div class="modal" id="modal">
+    <button class="modal-close" id="close-modal">&times;</button>
+    <p>
+        Ты шагаешь, не замечая, как земля под ногами теряет прочность. В одно мгновение всё привычное уходит. 
+        Твой взгляд скользит по стенкам открытого канализационного люка, и ты понимаешь — слишком поздно.
+    </p>
 </div>
 
-<!-- ------------------- СКРИПТ ------------------- -->
+<!-- ------------------- ЗВУК РАСКРЫТИЯ ------------------- -->
+<audio id="open-sound" src="audio/open.mp3" preload="auto"></audio>
+
 <script>
-    // Модальное окно
-    const albumCover = document.getElementById('album');
-    const modal = document.getElementById('modal');
-    const closeModal = document.getElementById('close-modal');
-    const tracklist = document.getElementById('tracklist');
-    let isTracklistOpen = false;
+    const album = document.getElementById("album");
+    const tracklist = document.getElementById("tracklist");
+    const openSound = document.getElementById("open-sound");
+    const modal = document.getElementById("modal");
+    const closeModal = document.getElementById("close-modal");
 
-    // Открытие модального окна
-    albumCover.addEventListener('click', () => {
-        modal.classList.add('active');
+    let open = false;
+    let modalShown = false;
+
+    album.addEventListener("click", () => {
+        open = !open;
+        tracklist.style.maxHeight = open ? "500px" : "0";
+        if (open) {
+            openSound.currentTime = 0;
+            openSound.play();
+        }
+
+        if (!modalShown) {
+            modal.style.display = "flex";  // Показываем модальное окно
+            modalShown = true;
+        }
     });
 
-    // Закрытие модального окна
-    closeModal.addEventListener('click', () => {
-        modal.classList.remove('active');
+    closeModal.addEventListener("click", () => {
+        modal.style.display = "none";  // Закрытие модального окна по кнопке
     });
 
-    // Открытие трек-листа при клике на обложку
-    albumCover.addEventListener('click', () => {
-        isTracklistOpen = !isTracklistOpen;
-        tracklist.style.maxHeight = isTracklistOpen ? '500px' : '0';
-    });
+    /* ---------------------- КРЫСЫ ---------------------- */
+    function spawnRat() {
+        const r = document.createElement("div");
+        r.classList.add("rat");
+        // Рандомизация позиции (снизу, сбоку и т.д.)
+        r.style.left = `${Math.random() * 100}vw`;
+        r.style.bottom = `${Math.random() * 40}px`;
 
-    // Крысы
-    setInterval(() => {
-        const rat = document.createElement('div');
-        rat.classList.add('rat');
-        document.body.appendChild(rat);
-        setTimeout(() => rat.remove(), 3000);
-    }, 4000);
+        // Рандомизация скорости
+        const speed = Math.random() * 3 + 2; // скорость от 2s до 5s
+        r.style.animationDuration = `${speed}s`;
 
-    // Тени
-    setInterval(() => {
-        const shadow = document.createElement('div');
-        shadow.classList.add('shadow-creature');
+        document.body.appendChild(r);
+
+        // Удаляем крысу через несколько секунд после появления
+        setTimeout(() => {
+            r.remove();
+        }, speed * 1000);
+    }
+
+    setInterval(spawnRat, Math.random() * 2000 + 500);  // Периодичность появления (от 500 до 2500 мс)
+
+    /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
+    function spawnCreatureShadow() {
+        const shadow = document.createElement("div");
+        shadow.classList.add("shadow-creature");
+        shadow.style.top = `${Math.random() * 90 + 5}%`;
         document.body.appendChild(shadow);
-        setTimeout(() => shadow.remove(), 4000);
-    }, 7000);
+
+        setTimeout(() => {
+            shadow.remove();
+        }, 4000);
+    }
+
+    setInterval(spawnCreatureShadow, 5000);
+
+// --- Курсор с кислотным следом ---
+const cursor = document.querySelector('.cursor');
+document.addEventListener('mousemove', e => {
+  cursor.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+  // Частицы
+  for(let i=0; i<3; i++){
+    const trail = document.createElement('div');
+    trail.classList.add('trail');
+    trail.style.left = e.clientX + Math.random()*30-15 + 'px';
+    trail.style.top = e.clientY + Math.random()*30-15 + 'px';
+    trail.style.width = 10+Math.random()*10+'px';
+    trail.style.height = trail.style.width;
+    document.body.appendChild(trail);
+    setTimeout(()=>trail.remove(), 1200);
+  }
+});
+    
 </script>
 
 </body>
