--- a/index.html
+++ b/index.html
@@ -108,14 +108,22 @@
             filter: brightness(1.2);
         }
 
+        /* ---------------------- ТРЕК-ЛИСТ ---------------------- */
         .tracklist {
             max-height: 0;
-            overflow: hidden;
+            overflow-y: auto;  /* Для прокрутки */
             transition: max-height 0.5s ease;
             margin-top: 15px;
             background: #0c0c0f;
             border: 1px solid #222;
             padding: 0 15px;
+            height: 0;
+            overflow: hidden;
+        }
+
+        .tracklist.open {
+            max-height: 1000px;  /* Максимальная высота, изменяй по необходимости */
+            height: auto;
         }
 
         .track {
@@ -165,13 +173,13 @@
             animation: creep 4s linear forwards;
             z-index: 4;
         }
+
         @keyframes creep {
             0% { transform: translateX(-200px); opacity: 0; }
             20% { opacity: 0.4; }
             80% { opacity: 0.4; }
             100% { transform: translateX(130vw); opacity: 0; }
         }
-
     </style>
 </head>
 
@@ -202,84 +210,80 @@
             <audio controls src="audio/track3.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 4 — (название позже)</div>
             <audio controls src="audio/track4.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 5 — (название позже)</div>
             <audio controls src="audio/track5.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 6 — (название позже)</div>
             <audio controls src="audio/track6.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 7 — (название позже)</div>
             <audio controls src="audio/track7.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 8 — (название позже)</div>
             <audio controls src="audio/track8.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 9 — (название позже)</div>
             <audio controls src="audio/track9.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 10 — (название позже)</div>
             <audio controls src="audio/track10.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 11 — (название позже)</div>
             <audio controls src="audio/track11.mp3"></audio>
         </div>
 
-         <div class="track">
+        <div class="track">
             <div class="track-name">Трек 12 — (название позже)</div>
             <audio controls src="audio/track12.mp3"></audio>
-        </div>
-
-         <div class="track">
-            <div class="track-name">Трек 13 — (название позже)</div>
-            <audio controls src="audio/track13.mp3"></audio>
         </div>
     </div>
 </div>
 
 <!-- ------------------- МОДАЛЬНОЕ ОКНО ------------------- -->
 <div class="modal" id="modal">
-    <button class="modal-close" id="close-modal">&times;</button>
-    <p>
-        Ты шагаешь, не замечая, как земля под ногами теряет прочность. В одно мгновение всё привычное уходит. 
-        Твой взгляд скользит по стенкам открытого канализационного люка, и ты понимаешь — слишком поздно.
-    </p>
+    <button class="modal-close" id="modal-close">X</button>
+    <div>Это альбом, который я нашел в темных уголках вселенной. Разгадай его.</div>
 </div>
 
-<!-- ------------------- ЗВУК РАСКРЫТИЯ ------------------- -->
-<audio id="open-sound" src="audio/open.mp3" preload="auto"></audio>
+<!-- ------------------- РАТЫ И ТЕНИ ------------------- -->
+<div class="rat"></div>
+<div class="shadow-creature"></div>
 
 <script>
     const album = document.getElementById("album");
     const tracklist = document.getElementById("tracklist");
-    const openSound = document.getElementById("open-sound");
     const modal = document.getElementById("modal");
-    const closeModal = document.getElementById("close-modal");
-
+    const modalClose = document.getElementById("modal-close");
     let open = false;
     let modalShown = false;
 
     album.addEventListener("click", () => {
         open = !open;
-        tracklist.style.maxHeight = open ? "500px" : "0";
         if (open) {
+            tracklist.classList.add("open");
+        } else {
+            tracklist.classList.remove("open");
+        }
+        if (open) {
+            const openSound = new Audio('audio/open-sound.mp3');
             openSound.currentTime = 0;
             openSound.play();
         }
@@ -290,63 +294,10 @@
         }
     });
 
-    closeModal.addEventListener("click", () => {
-        modal.style.display = "none";  // Закрытие модального окна по кнопке
+    modalClose.addEventListener("click", () => {
+        modal.style.display = "none";  // Скрыть модальное окно
+        modalShown = false;
     });
-
-    /* ---------------------- КРЫСЫ ---------------------- */
-    function spawnRat() {
-        const r = document.createElement("div");
-        r.classList.add("rat");
-        // Рандомизация позиции (снизу, сбоку и т.д.)
-        r.style.left = `${Math.random() * 100}vw`;
-        r.style.bottom = `${Math.random() * 40}px`;
-
-        // Рандомизация скорости
-        const speed = Math.random() * 3 + 2; // скорость от 2s до 5s
-        r.style.animationDuration = `${speed}s`;
-
-        document.body.appendChild(r);
-
-        // Удаляем крысу через несколько секунд после появления
-        setTimeout(() => {
-            r.remove();
-        }, speed * 1000);
-    }
-
-    setInterval(spawnRat, Math.random() * 2000 + 500);  // Периодичность появления (от 500 до 2500 мс)
-
-    /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
-    function spawnCreatureShadow() {
-        const shadow = document.createElement("div");
-        shadow.classList.add("shadow-creature");
-        shadow.style.top = `${Math.random() * 90 + 5}%`;
-        document.body.appendChild(shadow);
-
-        setTimeout(() => {
-            shadow.remove();
-        }, 4000);
-    }
-
-    setInterval(spawnCreatureShadow, 5000);
-
-// --- Курсор с кислотным следом ---
-const cursor = document.querySelector('.cursor');
-document.addEventListener('mousemove', e => {
-  cursor.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
-  // Частицы
-  for(let i=0; i<3; i++){
-    const trail = document.createElement('div');
-    trail.classList.add('trail');
-    trail.style.left = e.clientX + Math.random()*30-15 + 'px';
-    trail.style.top = e.clientY + Math.random()*30-15 + 'px';
-    trail.style.width = 10+Math.random()*10+'px';
-    trail.style.height = trail.style.width;
-    document.body.appendChild(trail);
-    setTimeout(()=>trail.remove(), 1200);
-  }
-});
-    
 </script>
 
 </body>
