--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             font-family: "Arial", sans-serif;
             overflow-x: hidden;
             position: relative;
+            cursor: none; /* Убираем стандартный курсор */
         }
 
         /* --- МРЯКОТНАЯ ФОНА ТУМАНА --- */
@@ -30,6 +31,7 @@
             animation: fogMove 20s ease-in-out infinite alternate;
             z-index: 1;
         }
+
         @keyframes fogMove {
             0% { transform: translate(-20px, -20px); }
             100% { transform: translate(20px, 20px); }
@@ -180,6 +182,25 @@
             80% { opacity: 0.4; }
             100% { transform: translateX(130vw); opacity: 0; }
         }
+
+        /* ---------------------- КИСЛОТНЫЙ КУРСОР ---------------------- */
+        .cursor {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: rgba(0, 255, 0, 0.8);
+            border-radius: 50%;
+            pointer-events: none;
+            transition: transform 0.1s ease;
+        }
+
+        .trail {
+            position: absolute;
+            background: rgba(0, 255, 0, 0.5);
+            border-radius: 50%;
+            pointer-events: none;
+            transition: all 1s ease-out;
+        }
     </style>
 </head>
 
@@ -200,78 +221,30 @@
             <audio controls src="audio/track1.mp3"></audio>
         </div>
 
-        <div class="track">
-            <div class="track-name">Трек 2 — (название позже)</div>
-            <audio controls src="audio/track2.mp3"></audio>
-        </div>
+        <!-- другие треки ... -->
 
-        <div class="track">
-            <div class="track-name">Трек 3 — (название позже)</div>
-            <audio controls src="audio/track3.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 4 — (название позже)</div>
-            <audio controls src="audio/track4.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 5 — (название позже)</div>
-            <audio controls src="audio/track5.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 6 — (название позже)</div>
-            <audio controls src="audio/track6.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 7 — (название позже)</div>
-            <audio controls src="audio/track7.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 8 — (название позже)</div>
-            <audio controls src="audio/track8.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 9 — (название позже)</div>
-            <audio controls src="audio/track9.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 10 — (название позже)</div>
-            <audio controls src="audio/track10.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 11 — (название позже)</div>
-            <audio controls src="audio/track11.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 12 — (название позже)</div>
-            <audio controls src="audio/track12.mp3"></audio>
-        </div>
     </div>
 </div>
 
 <!-- ------------------- МОДАЛЬНОЕ ОКНО ------------------- -->
 <div class="modal" id="modal">
     <button class="modal-close" id="modal-close">X</button>
-    <div>Это альбом, который я нашел в темных уголках вселенной. Разгадай его.</div>
+    <p>Ты шагаешь, не замечая, как земля под ногами теряет прочность...</p>
 </div>
 
 <!-- ------------------- РАТЫ И ТЕНИ ------------------- -->
 <div class="rat"></div>
 <div class="shadow-creature"></div>
 
+<!-- ------------------- КИСЛОТНЫЙ КУРСОР ------------------- -->
+<div class="cursor" id="cursor"></div>
+
 <script>
     const album = document.getElementById("album");
     const tracklist = document.getElementById("tracklist");
     const modal = document.getElementById("modal");
     const modalClose = document.getElementById("modal-close");
+    const cursor = document.getElementById("cursor");
     let open = false;
     let modalShown = false;
 
@@ -281,11 +254,6 @@
             tracklist.classList.add("open");
         } else {
             tracklist.classList.remove("open");
-        }
-        if (open) {
-            const openSound = new Audio('audio/open-sound.mp3');
-            openSound.currentTime = 0;
-            openSound.play();
         }
 
         if (!modalShown) {
@@ -297,6 +265,58 @@
     modalClose.addEventListener("click", () => {
         modal.style.display = "none";  // Скрыть модальное окно
         modalShown = false;
+    });
+
+    /* ---------------------- КРЫСЫ ---------------------- */
+    function spawnRat() {
+        const rat = document.createElement("div");
+        rat.classList.add("rat");
+        rat.style.left = `${Math.random() * 100}vw`;
+        rat.style.bottom = `${Math.random() * 100}vh`;
+
+        // Рандомизация скорости
+        const speed = Math.random() * 3 + 2;
+        rat.style.animationDuration = `${speed}s`;
+
+        document.body.appendChild(rat);
+
+        setTimeout(() => {
+            rat.remove();
+        }, speed * 1000);
+    }
+
+    setInterval(spawnRat, Math.random() * 1000 + 500);  // Периодичность появления
+
+    /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
+    function spawnCreatureShadow() {
+        const shadow = document.createElement("div");
+        shadow.classList.add("shadow-creature");
+        shadow.style.top = `${Math.random() * 90 + 5}%`;
+        document.body.appendChild(shadow);
+
+        setTimeout(() => {
+            shadow.remove();
+        }, 4000);
+    }
+
+    setInterval(spawnCreatureShadow, 5000);
+
+    /* ---------------------- КИСЛОТНЫЙ КУРСОР ---------------------- */
+    document.addEventListener("mousemove", e => {
+        cursor.style.left = `${e.clientX - 10}px`;  // Центрируем курсор
+        cursor.style.top = `${e.clientY - 10}px`;
+
+        // Частицы
+        for (let i = 0; i < 3; i++) {
+            const trail = document.createElement('div');
+            trail.classList.add('trail');
+            trail.style.left = `${e.clientX + Math.random() * 30 - 15}px`;
+            trail.style.top = `${e.clientY + Math.random() * 30 - 15}px`;
+            trail.style.width = `${10 + Math.random() * 10}px`;
+            trail.style.height = trail.style.width;
+            document.body.appendChild(trail);
+            setTimeout(() => trail.remove(), 1200);
+        }
     });
 </script>
 
