--- a/index.html
+++ b/index.html
@@ -221,8 +221,65 @@
             <audio controls src="audio/track1.mp3"></audio>
         </div>
 
-        <!-- другие треки ... -->
+        <div class="track">
+            <div class="track-name">Трек 2 — (название позже)</div>
+            <audio controls src="audio/track2.mp3"></audio>
+        </div>
 
+        <div class="track">
+            <div class="track-name">Трек 3 — (название позже)</div>
+            <audio controls src="audio/track3.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 4 — (название позже)</div>
+            <audio controls src="audio/track4.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 5 — (название позже)</div>
+            <audio controls src="audio/track5.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 6 — (название позже)</div>
+            <audio controls src="audio/track6.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 7 — (название позже)</div>
+            <audio controls src="audio/track7.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 8 — (название позже)</div>
+            <audio controls src="audio/track8.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 9 — (название позже)</div>
+            <audio controls src="audio/track9.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 10 — (название позже)</div>
+            <audio controls src="audio/track10.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 11 — (название позже)</div>
+            <audio controls src="audio/track11.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 12 — (название позже)</div>
+            <audio controls src="audio/track1.mp3"></audio>
+        </div>
+
+        <div class="track">
+            <div class="track-name">Трек 13 — (название позже)</div>
+            <audio controls src="audio/track13.mp3"></audio>
+        </div>
     </div>
 </div>
 
@@ -335,3 +392,4 @@
 
 </body>
 </html>
+
